NFDIV-5102 Fix Imports and Style issues